# Infinity_Online_Server_Emulator

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  account_database.example.json  account_database.json  build.bat  run.bat  run_udp_experimental.bat  tcp_lzss_server_options.example.json  tcp_lzss_server_options.json
client_runtime/: README.md
data/: README.md  package_contents.csv
data/missions/: mission_0_6.csv
data/setting/: character.csv  game_itemlist.csv  item.csv  item_skill.csv  item_skill_v2.csv
http_server/: README.md  server.js
include/cpp_server/core/: AccountDatabase.h  ByteBuffer.h  GameDataCatalog.h  Json.h  Logger.h  LogicalPacket.h  LzssCodec.h  OptionsStore.h  PacketLog.h  SocketPlatform.h  Utf.h
include/cpp_server/game/: InventoryService.h
include/cpp_server/server/: ClientSession.h  OptionPacketHelpers.h  PacketScheduler.h  RoomRegistry.h  RoomStatePackets.h  SessionPacketEffects.h  TcpLzssServer.h
include/cpp_server/udp/: UdpCombat.h  UdpGamePackets.h  UdpGameServer.h  UdpInitialSyncContext.h  UdpPeerState.h  UdpProtocol.h
injector/: README.md  build.bat  hook.cpp  injector.cpp
src/: main.cpp
src/core/: AccountDatabase.cpp  GameDataCatalog.cpp  Json.cpp  Logger.cpp  LzssCodec.cpp  OptionsStore.cpp  PacketLog.cpp  Utf.cpp
src/game/: InventoryService.cpp
src/server/: ClientSession.cpp  OptionPacketHelpers.cpp  PacketScheduler.cpp  RoomRegistry.cpp  RoomStatePackets.cpp  SessionPacketEffects.cpp  TcpAccountHandlers.cpp  TcpAdminCommands.cpp  TcpAuthHandlers.cpp  TcpAutoHandlers.cpp  TcpConnectionLoop.cpp  TcpEquipmentHandlers.cpp  TcpFullRoomStateHandlers.cpp  TcpItemRemovalHandlers.cpp  TcpListHandlers.cpp  TcpLzssServer.cpp  TcpNicknameHandlers.cpp  TcpPacketDispatch.cpp  TcpQuickslotHandlers.cpp  TcpRoomCharacterSelectHandlers.cpp  TcpRoomCreateHandlers.cpp  TcpRoomInfoHandlers.cpp  TcpRoomLeaveHandlers.cpp  TcpRoomPlayerState.cpp  TcpRoomStartHandlers.cpp  TcpRoomState.cpp  TcpRuntimeRoomState.cpp  TcpSessionOptions.cpp  TcpSessionSupport.cpp  TcpShopHandlers.cpp  TcpSkillShopHandlers.cpp  TcpStateHandlers.cpp  TcpUdpBridge.cpp
src/tools/: udp_hook_log_decode.cpp  udp_traffic_logger.cpp
src/udp/: UdpCombat.cpp  UdpGamePackets.cpp  UdpGameServer.cpp  UdpProtocol.cpp
tools/: export_item_catalog_json.ps1  seed_account_inventory_from_catalog.ps1
tools/unpacker/: README.md  compile.bat  repack.c  unpack.c
(+80 files in other folders)
